iis nginx letsencrypt/tls-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: iis-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - [DNS-for-web-site]
    secretName: iis-tls
  rules:
  - host: [DNS-for-web-site]
    http:
      paths:
      - path: /
        backend:
          serviceName: iis-service
          servicePort: 80
